Add legal and contributors

--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -271,6 +271,14 @@
     <!-- Device Info screen. LineageOS legal. -->
     <string name="lineagelicense_title">LineageOS legal</string>
 
+    <!-- Device Info screen. /e/ legal. -->
+    <string name="elicense_title">/e/ legal</string>
+
+    <!-- Device Info sceen. /e/ contributors -->
+    <string name="e_contributors_title">/e/ contributors</string>
+    <string name="e_supporters_title">/e/ supporters</string>
+    <string name="lineageos_contributors_title">LineageOS contributors</string>
+
     <!-- Double tap to sleep on status bar or lockscreen -->
     <string name="status_bar_double_tap_to_sleep_title">Tap to sleep</string>
     <string name="status_bar_double_tap_to_sleep_summary">Double-tap on the status bar or lockscreen to turn off the display</string>
