--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -107,6 +107,12 @@
     <!-- Dashboard image tile size -->
     <dimen name="dashboard_tile_image_size">36dp</dimen>
 
+    <!-- Dashboard chevron tile size -->
+    <dimen name="dashboard_tile_chevron_size">16dp</dimen>
+
+    <!-- Dashboard tile chevron margin start / end -->
+    <dimen name="dashboard_tile_chevron_margin">16dp</dimen>
+
     <!-- Dashboard foreground image size -->
     <dimen name="dashboard_tile_foreground_image_size">24dp</dimen>
 
@@ -115,6 +121,8 @@
 
     <!-- Dashboard tile image margin start / end -->
     <dimen name="dashboard_tile_image_margin">18dp</dimen>
+
+    <dimen name="dashboard_tile_divider_offset">8dp</dimen>
 
     <!-- SwitchBar sub settings margin start / end -->
     <dimen name="switchbar_subsettings_margin_start">72dp</dimen>
