--- a/res/xml/account_type_settings.xml
+++ b/res/xml/account_type_settings.xml
@@ -25,6 +25,12 @@
         android:selectable="false"
         android:order="-10000"/>
 
+    <com.android.settings.applications.LayoutPreference
+        android:key="account_remote_storage"
+        android:layout="@layout/account_remote_storage"
+        android:order="10"
+        android:selectable="false"/>
+
     <PreferenceCategory
       android:key="dashboard_tile_placeholder"
       android:order="100"/>
