Changed textAlignment to gravity for the TextView in account_remote_storage.xml

--- a/res/xml/account_remote_storage.xml
+++ b/res/xml/account_remote_storage.xml
@@ -10,7 +10,7 @@
         android:id="@+id/storage_usage_text"
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
-        android:textAlignment="left"
+        android:gravity="left"
         android:text="@string/e_used_space"/>
 
     <ProgressBar
