Changed progress bar id

--- a/res/layout/account_remote_storage.xml
+++ b/res/layout/account_remote_storage.xml
@@ -14,7 +14,7 @@
         android:text="@string/e_used_space"/>
 
     <ProgressBar
-        android:id="@+id/determinateBar"
+        android:id="@+id/storage_usage_bar"
         style="@android:style/Widget.ProgressBar.Horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
